# DataVizProject

./: .env.example  .gitignore  DEPLOI_HUGGINGFACE.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
doc/: NOTE_EXEMPLES.md
src/data_viz_app/: __init__.py  app.py  data_loader.py  llm_client.py  visualizations.py
tests/: test_data_loader.py  test_visualizations.py
