[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "data-viz-intelligent"
version = "1.0.0"
description = "Application web intelligente de data visualization pilotée par LLM"
authors = ["Équipe BDIA"]
readme = "README.md"
license = "MIT"
packages = [{include = "data_viz_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
pandas = "^2.1.0"
plotly = ">=6.1.1"
google-genai = "^1.0.0"
datasets = "^2.16.0"
python-dotenv = "^1.0.0"
kaleido = ">=1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
data-viz-app = "data_viz_app.app:main"
